--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
             "email": "waughjai@gmail.com"
         }
     ],
-    "type": "project",
+    "type": "library",
     "require": {
-		"php": ">=7.2"
+		"php": ">=7.0"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*"
